--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "bhargavi-sardesai",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+"scripts": {
+  "dev": "next dev",
+  "build": "NODE_ENV=production next build",
+  "export": "NODE_ENV=production next export",
+  "start": "next start",
+  "lint": "next lint",
+  "deploy": "npm run build && npm run export"
+},
   "dependencies": {
     "next": "15.3.4",
     "react": "^19.0.0",
